# rust_testing

./: .gitignore  AuthService.cs  Cargo.toml  auth_service.rs
learning/: Cargo.toml
learning/src/: actix_main.rs  async_printing.rs  async_std_fileprint.rs  binary_search.rs  bitwise_or.rs  chat_client  chat_client.rs  chat_server  chat_server.rs  chrono_time_helper.rs  closure.rs  colorprint.rs  connection_pool_stimulator.rs  course_registration.rs  cow_borrow.rs  data_race_example.rs  dead_queue.rs  derive_traits.rs  draw_ppm_fractorial_tree.rs  error_handling.rs  fast_iterator_slice.rs  find_duplicate.rs  format.rs  go_pass_by_pointer_by_value.go  guessing_game.rs  hashmap_hashset.rs  helloworld  helloworld.rs  intensive_iterator.rs  iterator.rs  lifetime.rs  login.rs  main (old).rs  main (old1).rs  main.rs  match.rs  memory_address.rs  move_example.rs  mpsc  mpsc.rs  (+31 more)
learning/src/algorithms/: binary_tree.rs  binary_tree1  binary_tree1.rs  climbing_stairs.rs  combination_sum.rs  count_primes.rs  largest_rectangle_in_histogram.rs  linked_list.rs  linked_list_generic.rs  lru_cache1.rs  lru_cache2.rs  majority_element.rs  matrix_calc.rs  max_coin_until_end.rs  nbody.rs  password_hash.rs  rat_in_a_maze1.rs  remove_duplicates_count.rs  reverse_bits.rs  reverse_integer.rs  set_matrix_zeroes.rs  sudoku_solver.rs  sudoku_solver_print.rs  three_sum.rs  two_sum.rs  two_sum2.rs  word_search.rs
learning/src/bt/: LOPPS.rs  mail_sv.rs
learning/src/microsoft learn/: hashmap.rs
learning/src/oop/: generic_examples.rs  inheritance_polymorphism.rs
learning/src/tokio_tungstenite/: tokio_tungstenite_todo.rs
tcp/: Cargo.toml
tcp/src/: client.rs  main.rs
