[package]
name = "learning"
version = "0.1.0"
edition = "2021"
authors = ["Dionysus <dionysus-oss@proton.me>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
actix-web = "4"
tokio-tungstenite = "0.21"
futures-channel = "0.3"
futures-util = "0.3"
pin-project = "1.1.3"
ws = "0.9.2"
futures = "0.3"
env_logger = "0.10.1"
chrono = "0.4.31"
terminal-spinners = "0.3.2"
rayon = "1.7.0"
ctrlc = "3.4.1"
num-traits = "0.2.15"
num_cpus = "1.13.0"
serde = { version = "1.0.171", features = ["derive"] }
serde_json = "1.0.1"
sysinfo = "0.29.4"
termcolor = "1.2.0"
colored = "2.0"
rand = "0.8.4"
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.12.0", features = ["attributes"]}
static-rc = "0.6.1"
deadqueue = "0.2.4"
base64 = "0.21.2"
sha2 = "0.10.7"
console = "0.15.8"
dirs = "5.0.1"
reqwest = { version = "0.11.25", features = ["stream"]}
tqdm = "0.6.0"
indicatif = "0.17.8"
bytes = "1.5.0"
wasm-streams = "0.4.0"
